Closed Bug 1658407 Opened 4 years ago Closed 4 years ago

Opaqueness tinting is broken (debug pref gfx.core-animation.tint-opaque)

Categories

(Core :: Graphics: WebRender, defect)

All
macOS
defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox79 --- unaffected
firefox80 --- unaffected
firefox81 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

The pref gfx.core-animation.tint-opaque no longer works correctly; all "tint layers" are at (0, 0).

mOpaquenessTintLayer is a sibling layer of mContentCALayer, so the two layers
need the same transform and bounds.

This patch also removes an unnecessary twiddling of the position property.

Set release status flags based on info from the regressing bug 1653166

Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/e23b98f57dfc
Set correct transforms on the opaqueness tinting layers. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: