Bug 1658407 - Set correct transforms on the opaqueness tinting layers. r=mattwoodrow

mOpaquenessTintLayer is a sibling layer of mContentCALayer, so the two layers
need the same transform and bounds.

This patch also removes an unnecessary twiddling of the position property.

Differential Revision: https://phabricator.services.mozilla.com/D86610